backend/app/assets/stylesheets/spree/backend/plugins/_select2.scss
.select2-container {
  display: block;

  .select2-choice {
    height: $input-height;
    line-height: 2.2;
    border-color: $input-border-color;
    background-image: none;
    background-color: $input-bg;

    &, .select2-arrow {
      border-radius: $border-radius;
    }

    .select2-arrow {
      background-image: none;
      background-color: $input-bg;
      border-top-left-radius: 0;
      border-bottom-left-radius: 0;
      border-left-color: $input-border-color;

      b {
        background-position: 0 7px;
      }
    }

    .select2-chosen {
      line-height: 36px;
      vertical-align: middle;
      display: inline;
    }

    abbr {
      top: 12px;
    }
  }
}

.select2-search input {
  border-color: $input-border-color;
  border-radius: $border-radius;
}

.select2-drop {
  &, &.select2-drop-above {
    border-radius: $border-radius;
    box-shadow: none;
  }
}

.select2-container-active {
  &, & a {
    box-shadow: none !important;
  }
}

.select2-dropdown-open.select2-drop-above .select2-choice,
.select2-dropdown-open.select2-drop-above .select2-choices {
  background-image: none;
}

.select2-dropdown-open.select2-drop-above .select2-choice {
  border-radius: 0 0 $border-radius $border-radius;
}

.select2-drop-above,
.select2-dropdown-open.select2-drop-above .select2-choice,
.select2-dropdown-open .select2-choice,
.select2-drop.select2-drop-above.select2-drop-active,
.select2-drop.select2-drop-active {
  border-color: lighten($success, 20);
}

.select2-result-label {
  color: $gray-900;
}

.select2-results .select2-highlighted {
  background-color: $primary;

  .select2-result-label {
    color: white;
  }
}

.select2-container-multi {
  .select2-choices {
    line-height: 1.8;
    border-color: $input-border-color;
    background-image: none;
    background-color: $input-bg;

    .select2-search-choice {
      @extend .badge;
      @extend .badge-info;

      box-shadow: none;
      border: none;
      background-image: none;
      margin: 5px;
      padding: 7px;

      .select2-search-choice-close {
        @extend .glyphicon;
        @extend .glyphicon-remove;

        background-image: none !important;
        font-size: 100%;
        color: white !important;
        position: absolute;
        left: 7px;
        top: 7px;
      }

      div {
        padding-left: 15px;
      }
    }
  }

  &.select2-container-active {
    .select2-choices {
      box-shadow: none;
      border-color: lighten($success, 20);
    }
  }
}

